@@ -2,6 +2,7 @@ Noteworthy changes in release ?.?? (????-??-??)
 ===============================================
 
 * Improvements
+  * Added an interface of raising des Strausses awareness.
 
 * Bug fixes
 
